--- a/css/style.css
+++ b/css/style.css
@@ -16,11 +16,11 @@ h2 {
     font-size: 20px;
 }
 h3 {
-    color: #1a00aa;
+    color: #000000;
     font-size: 16px;
 }
 .tekst_piosenki, .info {
-    border: #1a00aa solid 3px;
+    border: #000000 solid 3px;
     margin-top: 10px;
     margin-bottom: 10px;
 }
